Do no longer use frames when reading text. do_text_text and do_text_header are now summoned directly. The ability to resize was partially broken in the process. You can no longer resize vertically. Horizontal resize is no longer saved to settings. Refactored PHP in do_text_header.

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,8 @@ dt
 {border-left:1px solid black;border-top:1px solid black;border-bottom:1px solid black;background-color:#EEEEEE}.bordermiddle
 {border-top:1px solid black;border-bottom:1px solid black;background-color:#EEEEEE}.borderright
 {border-right:1px solid black;border-top:1px solid black;border-bottom:1px solid black;background-color:#EEEEEE}.wizard
-{margin:20px 0 5px 0}
+{margin:20px 0 5px 0}.resizable
+{min-height:30px;min-width:30px;resize:both;overflow:auto;max-height:fit-content;max-width:fit-content}
 @media print
 {.noprint
 {display:none}
